# splifft

./: .gitignore  404.html  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/: index.html
api/config/: index.html
api/core/: index.html
api/inference/: index.html
api/io/: index.html
api/models/: index.html
api/training/: index.html
api/types/: index.html
assets/css/: plots.css
concepts/: index.html
data/: config.schema.json  registry.json  registry.schema.json
data/config/: beat_this-cpjku-small.json  beat_this-cpjku.json  bs_roformer-aufr33-male_female.json  bs_roformer-unwa-large_v1.json  bs_roformer-unwa-resurrection_vocals.json
docs/: concepts.md  models.md  tutorial.md
docs/assets/css/: plots.css
docs/examples/: inference.py  inference_low_level.py
docs/examples/ext_project/scripts/: main.py
docs/examples/ext_project/src/my_library/models/: my_model.py
examples/: inference.py
examples/ext_project/: pyproject.toml
examples/ext_project/scripts/: main.py
examples/ext_project/src/my_library/models/: __init__.py
models/: index.html
scripts/: community.py  gen_schema.py  mvsep.py  parse_weights.py  run_profile.py
search/: search_index.json
src/splifft/: __init__.py  __main__.py  config.py  core.py  inference.py  io.py  types.py
src/splifft/data/: README.md  config.schema.json  registry.json  registry.schema.json
src/splifft/data/config/: .bs_roformer-anvuew-dereverb.json  .bs_roformer-anvuew-dereverb_room_mono.json  .bs_roformer-anvuew-karaoke.json  .bs_roformer-gabox-instrumental.json  .bs_roformer-sucial-chorus-mf.json  .bs_roformer-unwa-hyperace_v2_instrum.json  .bs_roformer-unwa-hyperace_v2_vocals.json  .bs_roformer-unwa-inst_exp_value_residual.json  .bs_roformer-unwa-inst_fno.json  .bs_roformer-viperx-1053.json  .bs_roformer-viperx-1297.json  .bs_roformer-zfturbo-musdb18.json  .mel_roformer-amane-fullnessvocalmodel.json  .mel_roformer-amane-small.json  .mel_roformer-anvuew-dereverb.json  .mel_roformer-aufr33-decrowd.json  .mel_roformer-aufr33-denoise.json  .mel_roformer-becruily-deux.json  .mel_roformer-becruily-guitar.json  .mel_roformer-becruily-karaoke.json  .mel_roformer-becruily-vocals.json  .mel_roformer-chencfd-guitar.json  .mel_roformer-gabox-flowers_v10.json  .mel_roformer-gabox-inst.json  .mel_roformer-gabox-karaoke.json  .mel_roformer-kim-vocals.json  .mel_roformer-mesk-metal_preview.json  .mel_roformer-mesk-rifforge.json  .mel_roformer-mesk-rifforge_beta.json  .mel_roformer-neoculture-inst_vfx.json  .mel_roformer-sucial-dereverb_echo_fused.json  .mel_roformer-syh99999-syhftb1.json  .mel_roformer-unwa-big_beta4.json  .mel_roformer-unwa-big_beta5e.json  .mel_roformer-unwa-big_beta6.json  .mel_roformer-unwa-big_beta6x.json  .mel_roformer-unwa-big_beta7.json  .mel_roformer-unwa-bleed_suppressor_v1.json  .mel_roformer-unwa-duality.json  .mel_roformer-unwa-inst.json  (+74 more)
src/splifft/models/: __init__.py  basic_pitch.py  beat_this.py  bs_roformer.py  mdx23c.py  pesto.py
src/splifft/models/utils/: attend.py  hyperace.py  tfc_tdf.py
tests/: test_config.py  test_registry.py
tutorial/: index.html
