[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splifft_ext_project"
version = "0.1.0"
description = "An tutorial external project depending on `splifft`"
requires-python = ">=3.10"
dependencies = ["splifft"]

[tool.uv.sources]
splifft = { workspace = true }
